Fixed schedules overlapping on small screens

--- a/frontend/app/src/components/Schedules/styles.module.scss
+++ b/frontend/app/src/components/Schedules/styles.module.scss
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: row;
 
-    height: 60px !important;
+    //  height: 100px !important;
     &Item {
         &Left,
         &Right {
@@ -24,13 +24,25 @@
             justify-content: center;
         }
         &Left {
-            width: 60px;
+            width: 60px !important;
+        }
+        &Right {
+            max-width: 140px;
+            @include bp-custom(400px) {
+                max-width: 200px;
+            }
+            @include bp-custom(500px) {
+                max-width: 450px;
+            }
         }
         &Top,
         &Bot {
             font-family: 'Lato';
-            font-size: 18px;
+            font-size: 16px;
             line-height: 24px;
+            @include bp-custom(500px) {
+                font-size: 18px;
+            }
         }
         &Top {
             font-weight: bold;
